--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "dotenv": "^8.2.0",
+    "querystring": "^0.2.0",
+    "spotify-web-api-js": "^1.4.0",
+    "spotify-web-api-node": "^4.0.0",
+    "vue": "^2.6.11",
+    "vue-spotify": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
